@@ -2,6 +2,7 @@ lintian-brush (0.38) UNRELEASED; urgency=medium
 
   * Add missing dependency on libdebhelper-perl for autopkgtest.
   * Add support for bumping to standards version 4.4.1.
+  * Support replacing deprecated --same-arch with --arch.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 18 Oct 2019 17:37:51 +0000
 
